# vibe-workshop

./: .gitignore  AGENTS.md  README.md  STAGE.md  WORKSHOP.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.opencode-global/: opencode-global.json
.opencode/command/: create-issue.md  explain.md  lint.md  new-plan.md  stage.md  test.md
.opencode/skill/create-command/: SKILL.md
.opencode/skill/create-skill/: SKILL.md
.opencode/skill/link-branch-to-issue/: SKILL.md  link_branch_to_issue.sh
.opencode/skill/lint-and-format/: SKILL.md
plans/: 01-hello-world-fastapi-healthcheck.md  02-html-help-root-endpoint.md  03-recommendations-endpoint.md  04-category-based-recommendations.md  05-consistent-recommendation-response-format.md  06-create-interactive-create-issue-command.md  07-ci-on-push-coverage-lint-format-gate.md  TEMPLATE.md
src/: app.py
tests/: test_category_recommendations.py  test_healthcheck.py  test_recommendations.py  test_root_help.py
